--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     height: 100vh;
 }
 
+.navbar-menu{
+flex-grow: 0;
+}
+
 @media only screen and (max-width: 600px) {
     .banner-c {
         height: 45vh;
