--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,37 @@
     height: 100vh;
 }
 
-.navbar-menu{
-flex-grow: 0;
+.navbar-menu {
+    flex-grow: 0;
 }
 
 @media only screen and (max-width: 600px) {
-    .banner-c {
-        height: 45vh;
-        object-fit: cover;
+
+    .img-s {
+        height: 10px;
+        width: 10px;
     }
+
+    .header-img {
+        height: auto;
+        width: 100%;
+    }
+    .product-img{
+        height: 250px;
+        width: 100%;
+    }
+}
+
+.img-s {
+    height: 461px;
+    width: 400px;
+}
+
+.header-img {
+    height: auto;
+    width: 100%;
+}
+.product-img{
+    height: 250px;
+    width: 100%;
 }
